[package]
name = "restserver"
version = "0.1.0"
edition = "2021"
authors = [ "Nico" ]
description = "Hackathon 2023: rest server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[build-dependencies]
built = {version = "0.6", features = ["chrono", "git2"]}

[profile.release]
lto = true
strip = true
